Added the new workflow for the react proj and also included the actions

--- a/.github/workflows/HelloWorld_Action1.yml
+++ b/.github/workflows/HelloWorld_Action1.yml
@@ -1,6 +1,6 @@
 name: First Action Workflow
 
-on: workflow_dispatch
+on: workflow_dispatch #Manually Trigger the workflow
 
 jobs:
   firstJob:
@@ -16,6 +16,8 @@ jobs:
           echo "second Multi Line"
   
   
+##1. Default Workflow
+
 # This is a basic workflow to help you get started with Actions
 
 # name: CI
