--- a/.github/workflows/React_Action2.yml
+++ b/.github/workflows/React_Action2.yml
@@ -4,7 +4,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-
+      
     - name: Checkout the code
       uses: actions/checkout@v3.5.2
 
@@ -17,4 +17,4 @@ jobs:
       run: npm ci
 
     - name: Run the test cases
-      run: npm test
+      run: npm tests
