--- a/.github/workflows/S3Pra.yml
+++ b/.github/workflows/S3Pra.yml
@@ -14,3 +14,7 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run lint
+      - name: Run the test cases
+        run: npm run test
+      - name: deploy
+        run: echo "Deploying the react Git Applicaiton"
