steps for each action

--- a/.github/workflows/S3Pra.yml
+++ b/.github/workflows/S3Pra.yml
@@ -1,20 +1,47 @@
+# name: ET
+# on: push
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout the code
+#         uses: actions/checkout@v3.5.2
+#       - name: NodeJS Install
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+#       - name: Install the dependencies
+#         run: npm ci
+#       - name: Lint
+#         run: npm run lint
+#       - name: Run the test cases
+#         run: npm run test
+#       - name: deploy
+#         run: echo "Deploying the react Git Applicaiton"
+
 name: ET
 on: push
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3.5.2
-      - name: NodeJS Install
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: Install the dependencies
-        run: npm ci
+  tests:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
       - name: Lint
         run: npm run lint
+  lint:
+    needs: tests
+    runs-on: ubuntu-latest
+    steps:
       - name: Run the test cases
         run: npm run test
+  deploy:
+    needs: tests
+    runs-on: ubuntu-latest
+    steps:
       - name: deploy
         run: echo "Deploying the react Git Applicaiton"
