steps for each action

--- a/.github/workflows/S3Pra.yml
+++ b/.github/workflows/S3Pra.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Run the test cases
         run: npm run test
   deploy:
-    needs: tests
+    needs: lint
     runs-on: ubuntu-latest
     steps:
       - name: deploy
