--- a/.github/workflows/S3Pra.yml
+++ b/.github/workflows/S3Pra.yml
@@ -31,13 +31,13 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Lint
+      - name: run the test cases
         run: npm run test
   lint:
     needs: tests
     runs-on: ubuntu-latest
     steps:
-      - name: Run the test cases
+      - name: run the lint 
         run: npm run lint
   deploy:
     needs: lint
