--- a/.github/workflows/S3Pra.yml
+++ b/.github/workflows/S3Pra.yml
@@ -27,6 +27,9 @@ jobs:
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3.5.2
+      
+      - name: Install the dependencies
+        run: npm ci
   tests:
     needs: build
     runs-on: ubuntu-latest
