--- a/.github/workflows/Action4.yml
+++ b/.github/workflows/Action4.yml
@@ -2,16 +2,14 @@ name: Workflows and Events
 on:
     pull_request:
         types: [opened, edited]
-        branches:
-            - Feature*
     workflow_dispatch:
         # if you want to run the build for each commit you pushed after creating the PR.
-    # push:
-    #     branches:
-    #         - Feature*
-    #         - main
-    #     paths-ignore:
-    #         - '.github/workflows/*'
+    push:
+        branches:
+            - Feature*
+            - main
+        paths-ignore:
+            - '.github/workflows/*'
 
 jobs:
   deploy:
