--- a/.github/workflows/Action5.yml
+++ b/.github/workflows/Action5.yml
@@ -38,7 +38,9 @@ jobs:
         run: npm run build
       - name: publish Js filename
         id: publishh
-        run: find dist/assets/*.js -type f -execdir echo 'scpt-file={}' >>$GITHUB_OUTPUT';'
+        # run: find dist/assets/*.js -type f -execdir echo 'scpt-file={}' >>$GITHUB_OUTPUT';'
+        run: find dist/assets/*.js -type f -execdir echo 'scpt-file={}' \; >> $GITHUB_OUTPUT
+
 
       - name: upload the artifacts
         uses: actions/upload-artifact@v3
