--- a/.github/workflows/Action5.yml
+++ b/.github/workflows/Action5.yml
@@ -19,6 +19,11 @@ jobs:
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3.5.2
+      - name: Cache dependencies
+        uses: actions/checkout@v3
+        with:
+          path: ~/.npm
+          key: dependency-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install the dependencies
         run: npm ci
       - name: Test the code
@@ -32,6 +37,11 @@ jobs:
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3.5.2
+      - name: Cache dependencies
+        uses: actions/checkout@v3
+        with:
+          path: ~/.npm
+          key: dependency-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install the dependencies
         run: npm ci
       - name: Build the project
@@ -41,7 +51,6 @@ jobs:
         # run: find dist/assets/*.js -type f -execdir echo 'scpt-file={}' >>$GITHUB_OUTPUT';'
         run: find dist/assets/*.js -type f -execdir echo 'scpt-file={}' \; >> $GITHUB_OUTPUT
 
-
       - name: upload the artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -50,14 +59,13 @@ jobs:
             dist
             package.json
 
-
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - name: download the artifacts
         uses: actions/download-artifact@v3
-        with: 
+        with:
           name: react project dist files
 
       - name: output contents
