--- a/.github/workflows/Action5.yml
+++ b/.github/workflows/Action5.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v3.5.2
       - name: Cache dependencies
-        uses: actions/checkout@v3
+        uses: actions/cache@v3
         with:
           path: ~/.npm
           key: dependency-node-modules-${{ hashFiles('**/package-lock.json') }}
@@ -38,7 +38,7 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v3.5.2
       - name: Cache dependencies
-        uses: actions/checkout@v3
+        uses: actions/cache@v3
         with:
           path: ~/.npm
           key: dependency-node-modules-${{ hashFiles('**/package-lock.json') }}
